--- a/app/src/main/res/layout/activity_control_salud.xml
+++ b/app/src/main/res/layout/activity_control_salud.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#BED9BA"
+    android:backgroundTint="#BED9BA"
     tools:context=".control_salud">
 
     <TextView
@@ -56,23 +57,21 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:layout_width="298dp"
-        android:layout_height="579dp"
+        android:layout_width="296dp"
+        android:layout_height="563dp"
         android:background="#77A676"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.582"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.585">
+        app:layout_constraintVertical_bias="0.529">
 
         <TextView
             android:id="@+id/textView16"
             android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:layout_marginTop="10dp"
-            android:paddingTop="15dp"
+            android:layout_height="30dp"
             android:text="Numero de control Medico "
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -81,18 +80,19 @@
         <EditText
             android:id="@+id/editTextText6"
             android:layout_width="match_parent"
-            android:layout_height="44dp"
+            android:layout_height="35dp"
             android:layout_marginTop="10dp"
+            android:autoText="false"
             android:background="@color/white"
             android:ems="10"
-            android:inputType="text" />
+            android:inputType="text"
+            android:textColor="#000000" />
 
         <TextView
             android:id="@+id/textView18"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:paddingTop="15dp"
             android:text="Comidas cronometradas"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -105,14 +105,14 @@
             android:layout_marginTop="10dp"
             android:background="@color/white"
             android:ems="10"
-            android:inputType="text" />
+            android:inputType="text"
+            android:textColor="#000000" />
 
         <TextView
             android:id="@+id/textView17"
             android:layout_width="match_parent"
             android:layout_height="33dp"
             android:layout_marginTop="10dp"
-            android:paddingTop="15dp"
             android:text="Altura"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -125,7 +125,8 @@
             android:layout_marginTop="10dp"
             android:background="@color/white"
             android:ems="10"
-            android:inputType="text" />
+            android:inputType="text"
+            android:textColor="#000000" />
 
         <TextView
             android:id="@+id/textView19"
@@ -146,14 +147,14 @@
             android:layout_marginTop="10dp"
             android:background="@color/white"
             android:ems="10"
-            android:inputType="text" />
+            android:inputType="text"
+            android:textColor="#000000" />
 
         <TextView
             android:id="@+id/textView20"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:paddingTop="15dp"
             android:text="Peso"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -166,17 +167,27 @@
             android:layout_marginTop="10dp"
             android:background="@color/white"
             android:ems="10"
-            android:inputType="text" />
+            android:inputType="text"
+            android:textColor="#000000" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="61dp"
             android:layout_marginTop="10dp"
-            android:backgroundTint="#267331"
+            android:backgroundTint="#BED9BA"
             android:onClick="MenuP"
             android:text="Regresar "
-            android:textColor="@color/white" />
+            android:textColor="@color/black" />
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="match_parent"
+            android:layout_height="63dp"
+            android:backgroundTint="#BED9BA"
+            android:text="Actualizar"
+            android:textColor="@color/black" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
