--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -161,8 +161,9 @@
         android:id="@+id/button3"
         android:layout_width="142dp"
         android:layout_height="48dp"
-        android:backgroundTint="#267331"
+        android:backgroundTint="#77A676"
         android:text="Cerrar sesion"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
