--- a/app/src/main/res/layout/activity_recomendaciones_ej.xml
+++ b/app/src/main/res/layout/activity_recomendaciones_ej.xml
@@ -13,7 +13,7 @@
         android:layout_width="323dp"
         android:layout_height="46dp"
         android:layout_marginBottom="72dp"
-        android:backgroundTint="#267331"
+        android:backgroundTint="#77A676"
         android:onClick="MenuP"
         android:text="Regresar a la Pantalla Principal"
         android:textColor="@color/black"
