--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -181,12 +181,19 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="5dp"
-            android:layout_marginBottom="20dp"
-            android:backgroundTint="#267331"
+            android:backgroundTint="#BED9BA"
             android:onClick="Register"
             android:text="Registrar"
             android:textColor="@color/black" />
 
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#BED9BA"
+            android:onClick="MenuP"
+            android:text="Regresar"
+            android:textColor="@color/black" />
 
 
     </LinearLayout>
