--- a/app/src/main/res/layout/activity_usuario.xml
+++ b/app/src/main/res/layout/activity_usuario.xml
@@ -46,7 +46,7 @@
         android:id="@+id/regresar"
         android:layout_width="343dp"
         android:layout_height="52dp"
-        android:backgroundTint="#267331"
+        android:backgroundTint="#BED9BA"
         android:onClick="MenuP"
         android:text="Regresar a la Pantalla Principal"
         android:textColor="@color/black"
@@ -239,7 +239,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginEnd="40dp"
                 android:layout_marginBottom="52dp"
-                android:backgroundTint="#267331"
+                android:backgroundTint="#BED9BA"
                 android:onClick="MenuP"
                 android:text="Actualizar"
                 android:textColor="@color/black"
