--- a/app/src/main/res/layout/activity_usuario.xml
+++ b/app/src/main/res/layout/activity_usuario.xml
@@ -88,30 +88,10 @@
                 android:padding="8dp"
 
                 android:text="Nombre:"
-                android:textColor="@color/black"
-                android:textSize="18dp" />
-
-            <EditText
-
-                android:id="@+id/edtnombre"
-
-                android:layout_marginRight="10dp"
-                android:background="@color/white"
                 android:textColor="@color/black" />
-        </TableRow>
-
-        <TableRow android:layout_marginTop="10dp">
-
-            <TextView
-                android:layout_marginRight="20dp"
-                android:padding="8dp"
-
-                android:text="Apellidos:"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
 
             <EditText
-
+                android:id="@+id/edtnombre"
                 android:layout_marginRight="10dp"
                 android:background="@color/white"
                 android:textColor="@color/black" />
@@ -124,8 +104,7 @@
                 android:padding="8dp"
 
                 android:text="Edad:"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:textColor="@color/black" />
 
             <EditText
                 android:id="@+id/edtedad"
@@ -141,16 +120,10 @@
                 android:padding="8dp"
 
                 android:text="Peso:"
-                android:textColor="@color/black"
-                android:textSize="18dp" />
+                android:textColor="@color/black" />
 
             <EditText
-
                 android:id="@+id/edtpeso"
-
-                android:layout_width="163dp"
-                android:layout_height="wrap_content"
-
                 android:layout_marginRight="10dp"
                 android:background="@color/white"
                 android:textColor="@color/black" />
@@ -163,8 +136,7 @@
                 android:padding="8dp"
 
                 android:text="Talla:"
-                android:textColor="@color/black"
-                android:textSize="18dp" />
+                android:textColor="@color/black" />
 
             <EditText
                 android:id="@+id/edtTalla"
@@ -180,8 +152,7 @@
                 android:padding="8dp"
 
                 android:text="Estatura:"
-                android:textColor="@color/black"
-                android:textSize="18dp" />
+                android:textColor="@color/black" />
 
             <EditText
                 android:id="@+id/edtEstatura"
@@ -197,8 +168,7 @@
                 android:padding="8dp"
 
                 android:text="IMC:"
-                android:textColor="@color/black"
-                android:textSize="18dp" />
+                android:textColor="@color/black" />
 
             <EditText
                 android:id="@+id/edtImc"
@@ -214,8 +184,7 @@
                 android:padding="8dp"
 
                 android:text="Enfermedades:"
-                android:textColor="@color/black"
-                android:textSize="18dp" />
+                android:textColor="@color/black" />
 
             <EditText
                 android:id="@+id/edtEnf"
