--- a/app/src/main/res/layout/activity_control_salud.xml
+++ b/app/src/main/res/layout/activity_control_salud.xml
@@ -121,7 +121,7 @@
         <EditText
             android:id="@+id/editTextText8"
             android:layout_width="match_parent"
-            android:layout_height="41dp"
+            android:layout_height="37dp"
             android:layout_marginTop="10dp"
             android:background="@color/white"
             android:ems="10"
@@ -143,7 +143,7 @@
         <EditText
             android:id="@+id/editTextText9"
             android:layout_width="match_parent"
-            android:layout_height="34dp"
+            android:layout_height="37dp"
             android:layout_marginTop="10dp"
             android:background="@color/white"
             android:ems="10"
@@ -163,7 +163,7 @@
         <EditText
             android:id="@+id/editTextText10"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="37dp"
             android:layout_marginTop="10dp"
             android:background="@color/white"
             android:ems="10"
@@ -183,7 +183,8 @@
         <Button
             android:id="@+id/button4"
             android:layout_width="match_parent"
-            android:layout_height="63dp"
+            android:layout_height="61dp"
+            android:layout_marginTop="10dp"
             android:backgroundTint="#BED9BA"
             android:text="Actualizar"
             android:textColor="@color/black" />
