--- a/app/src/main/res/layout/activity_control_salud.xml
+++ b/app/src/main/res/layout/activity_control_salud.xml
@@ -57,16 +57,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:layout_width="296dp"
-        android:layout_height="563dp"
+        android:layout_width="295dp"
+        android:layout_height="442dp"
         android:background="#77A676"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.582"
+        app:layout_constraintHorizontal_bias="0.604"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.529">
+        app:layout_constraintVertical_bias="0.414">
 
         <TextView
             android:id="@+id/textView16"
@@ -170,26 +170,8 @@
             android:inputType="text"
             android:textColor="#000000" />
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="match_parent"
-            android:layout_height="61dp"
-            android:layout_marginTop="10dp"
-            android:backgroundTint="#BED9BA"
-            android:onClick="MenuP"
-            android:text="Regresar "
-            android:textColor="@color/black" />
-
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="match_parent"
-            android:layout_height="61dp"
-            android:layout_marginTop="10dp"
-            android:backgroundTint="#BED9BA"
-            android:text="Actualizar"
-            android:textColor="@color/black" />
-
     </LinearLayout>
+
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="267dp"
@@ -199,6 +181,35 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:srcCompat="@mipmap/nutriasset_foreground" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="274dp"
+        android:layout_height="51dp"
+        android:backgroundTint="#77A676"
+        android:text="Actualizar"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.66"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.889" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="273dp"
+        android:layout_height="50dp"
+        android:backgroundTint="#77A676"
+        android:onClick="MenuP"
+        android:text="Regresar "
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.675"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.808" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
