--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -162,7 +162,7 @@
         android:id="@+id/button3"
         android:layout_width="142dp"
         android:layout_height="48dp"
-        android:backgroundTint="#267331"
+        android:backgroundTint="#77A676"
         android:onClick="cerrar"
         android:text="Cerrar sesion"
         android:textColor="@color/black"
