--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -43,15 +43,17 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <LinearLayout
-        android:layout_width="319dp"
-        android:layout_height="569dp"
+        android:id="@+id/linearLayout4"
+        android:layout_width="340dp"
+        android:layout_height="449dp"
         android:background="#77A676"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.563"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.623">
+        app:layout_constraintVertical_bias="0.379">
 
         <TextView
             android:id="@+id/textView9"
@@ -174,25 +176,6 @@
             android:textColor="@color/black"
             android:textSize="20dp" />
 
-        <Button
-            android:id="@+id/REGRESAR"
-            android:layout_width="320dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:backgroundTint="#BED9BA"
-            android:onClick="Register"
-            android:text="Registrar"
-            android:textColor="@color/black" />
-
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#BED9BA"
-            android:onClick="MenuP"
-            android:text="Regresar"
-            android:textColor="@color/black" />
-
 
     </LinearLayout>
 
@@ -218,5 +201,33 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:srcCompat="@mipmap/nutriasset_foreground" />
+
+    <Button
+        android:id="@+id/REGRESAR"
+        android:layout_width="323dp"
+        android:layout_height="46dp"
+        android:backgroundTint="#77A676"
+        android:onClick="Register"
+        android:text="Registrar"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.823" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="319dp"
+        android:layout_height="41dp"
+        android:backgroundTint="#77A676"
+        android:onClick="MenuP"
+        android:text="Regresar"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.895" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
