--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,7 +74,7 @@
             android:ems="10"
             android:textColor="@color/black"
             android:hint="Correo"
-            android:inputType="text"
+            android:inputType="textEmailAddress"
             android:textSize="20dp" />
 
         <TextView
