--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -97,7 +97,7 @@
             android:background="@color/white"
             android:ems="10"
             android:hint="Correo"
-            android:inputType="text"
+            android:inputType="textEmailAddress"
             android:textColor="@color/black"
             android:textSize="20dp" />
 
@@ -146,7 +146,7 @@
             android:background="@color/white"
             android:ems="10"
             android:hint="Edad"
-            android:inputType="date"
+            android:inputType="number"
             android:textColor="@color/black"
             android:textSize="20dp" />
 
